Add labels if batch operations are not available. See #56492

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -954,6 +954,9 @@ GeneratorTestDataPanel.Column=Column
 GeneratorTestDataPanel.CountDigitsAfterComma=Count Digits After Comma
 GeneratorTestDataPanel.CountRecords=Count Records
 GeneratorTestDataPanel.BatchCount=Batch Size
+GeneratorTestDataPanel.UnsupportedDriver=This driver does not support batch operations. Use Jaybird 4 or newer
+GeneratorTestDataPanel.OOAPINotUsed=The connection does not use the OO API. Use it when connecting
+GeneratorTestDataPanel.UnsupportedServer=This server does not support batch operations. Batch operations are available in FB 4/RDB 4 or newer
 GeneratorTestDataPanel.Delimiter=Delimiter
 GeneratorTestDataPanel.FromFile=From File
 GeneratorTestDataPanel.FromTextArea=From Text Area
