--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -953,6 +953,9 @@ GeneratorTestDataPanel.Column=Столбец
 GeneratorTestDataPanel.CountDigitsAfterComma=Число цифр после запятой
 GeneratorTestDataPanel.CountRecords=Количество записей
 GeneratorTestDataPanel.BatchCount=Кол-во записей в пакете
+GeneratorTestDataPanel.UnsupportedDriver=Используемый драйвер не поддерживает пакетные операции. Используйте Jaybird 4 или более новый
+GeneratorTestDataPanel.OOAPINotUsed=Соединение не использует OO API. Используйте его при подключении к БД
+GeneratorTestDataPanel.UnsupportedServer=Используемый сервер не поддерживает пакетные операции. Пакетные операции доступны в FB 4/RDB 4 или новее
 GeneratorTestDataPanel.Delimiter=Разделитель
 GeneratorTestDataPanel.FromFile=Из файла
 GeneratorTestDataPanel.FromTextArea=Из текстового поля
