add display of information about external table files
(cherry picked from commit de94eb8bdba54acbdc6b626b583eb147efc5cae5)

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -639,6 +639,8 @@ BrowserTableEditingPanel.table-columns=Table Columns
 BrowserTableEditingPanel.table-indexes=Table Indexes
 BrowserTableEditingPanel.table-keys=Table Keys
 BrowserTableEditingPanel.table-name=Table Name:
+BrowserTableEditingPanel.external-file=External file
+BrowserTableEditingPanel.adapter=Adapter
 BrowserTreeFolderPopupMenu.ConnectAll=Connect All
 BrowserTreeFolderPopupMenu.DeleteFolder=Delete Folder
 BrowserTreeFolderPopupMenu.DisconnectAll=Disconnect All
