--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -638,6 +638,8 @@ BrowserTableEditingPanel.table-columns=Поля таблицы
 BrowserTableEditingPanel.table-indexes=Табличные индексы
 BrowserTableEditingPanel.table-keys=Ключи таблицы
 BrowserTableEditingPanel.table-name=Имя таблицы:
+BrowserTableEditingPanel.external-file=Внешний файл
+BrowserTableEditingPanel.adapter=Адаптер
 BrowserTreeFolderPopupMenu.ConnectAll=Подключить все
 BrowserTreeFolderPopupMenu.DeleteFolder=Удалить папку
 BrowserTreeFolderPopupMenu.DisconnectAll=Отключить все
