Improve the appearance of the database object tree: 1. Objects are not sorted alphabetically, but in order of importance. 2.Object types are not uppercase 3.System objects are highlighted in red 4. The types of objects that are present in the database are highlighted in bold.

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1070,31 +1070,31 @@ MetaKeyPanel.DatabaseObject=Database Object:
 MetaKeyPanel.NoObjects=No objects of this type are available.
 MetaKeyPanel.ObjectName=Object Name
 MetaKeyPanel.ObjectTypeName=Object Type Name: 
-NamedObject.DATABASE_TRIGGER=DATABASE TRIGGERS
-NamedObject.DOMAIN=DOMAINS
-NamedObject.EXCEPTION=EXCEPTIONS
-NamedObject.EXTERNAL_FUNCTION=UDF
-NamedObject.FUNCTION=FUNCTIONS
-NamedObject.GLOBAL_TEMPORARY=GLOBAL TEMPORARIES
-NamedObject.INDEX=INDEXES
-NamedObject.PACKAGE=PACKAGES
-NamedObject.PROCEDURE=PROCEDURES
-NamedObject.ROLE=ROLES
-NamedObject.SEQUENCE=SEQUENCES
-NamedObject.SYNONYM=SYNONYMS
-NamedObject.SYSTEM_DATE_TIME_FUNCTIONS=SYSTEM DATE TIME FUNCTIONS
-NamedObject.SYSTEM_DOMAIN=SYSTEM DOMAINS
-NamedObject.SYSTEM_FUNCTIONS=SYSTEM FUNCTIONS
-NamedObject.SYSTEM_INDEX=SYSTEM INDEXES
-NamedObject.SYSTEM_NUMERIC_FUNCTIONS=SYSTEM NUMERIC FUNCTIONS
-NamedObject.SYSTEM_ROLE=SYSTEM ROLES
-NamedObject.SYSTEM_STRING_FUNCTIONS=SYSTEM STRING FUNCTIONS
-NamedObject.SYSTEM_TABLE=SYSTEM TABLES
-NamedObject.SYSTEM_TRIGGER=SYSTEM TRIGGERS
-NamedObject.SYSTEM_VIEW=SYSTEM VIEWS
-NamedObject.TABLE=TABLES
-NamedObject.TRIGGER=TRIGGERS
-NamedObject.VIEW=VIEWS
+NamedObject.DATABASE_TRIGGER=Database triggers
+NamedObject.DOMAIN=Domains
+NamedObject.EXCEPTION=Exceptions
+NamedObject.EXTERNAL_FUNCTION=Udf
+NamedObject.FUNCTION=Functions
+NamedObject.GLOBAL_TEMPORARY=Global temporaries
+NamedObject.INDEX=Indexes
+NamedObject.PACKAGE=Packages
+NamedObject.PROCEDURE=Procedures
+NamedObject.ROLE=Roles
+NamedObject.SEQUENCE=Sequences
+NamedObject.SYNONYM=Synonyms
+NamedObject.SYSTEM_DATE_TIME_FUNCTIONS=System date time functions
+NamedObject.SYSTEM_DOMAIN=System domains
+NamedObject.SYSTEM_FUNCTIONS=System functions
+NamedObject.SYSTEM_INDEX=System indexes
+NamedObject.SYSTEM_NUMERIC_FUNCTIONS=System numeric functions
+NamedObject.SYSTEM_ROLE=System roles
+NamedObject.SYSTEM_STRING_FUNCTIONS=System string functions
+NamedObject.SYSTEM_TABLE=System tables
+NamedObject.SYSTEM_TRIGGER=System triggers
+NamedObject.SYSTEM_VIEW=System views
+NamedObject.TABLE=Tables
+NamedObject.TRIGGER=Triggers
+NamedObject.VIEW=Views
 ObjectDefinitionPanel.DatabaseView=Database View
 OpenFrameCommand.error.notConnected=Not Connected.\nPlease connect to continue.
 PrintPreviewCommand.done=Done
