Improve the appearance of the database object tree: 1. Objects are not sorted alphabetically, but in order of importance. 2.Object types are not uppercase 3.System objects are highlighted in red 4. The types of objects that are present in the database are highlighted in bold.
(cherry picked from commit 53fb93cfaf1619a27f5ea347780da4860d7b08a8)

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -565,28 +565,28 @@ ApplicationLogsCommand.messageResetAll=Вы уверены, что хотите 
 ApplicationLogsCommand.systemActivityLog=журнал активности системы?
 AsbtractImportExportWorker.cancelProcessConfirm=Это отменит текущий процесс. \nВы хотите продолжить?
 BrowserConstants.ALL_TYPES_CLOSED=Все типы закрыты
-BrowserConstants.FUNCTION=ФУНКЦИЯ
+BrowserConstants.FUNCTION=Функция
 BrowserConstants.FUNCTIONS_STRING=Функции
-BrowserConstants.INDEX=ИНДЕКС
+BrowserConstants.INDEX=Индекс
 BrowserConstants.INDEXES_STRING=Индексы
 BrowserConstants.PACKAGES_STRING=Пакеты
-BrowserConstants.PROCEDURE=ПРОЦЕДУРА
+BrowserConstants.PROCEDURE=Процедура
 BrowserConstants.PROCEDURES_STRING=Процедуры
 BrowserConstants.SCHEMA_STRING=Схема
-BrowserConstants.SEQUENCE=ГЕНЕРАТОР
+BrowserConstants.SEQUENCE=Генератор
 BrowserConstants.SEQUENCES_STRING=Генераторы
 BrowserConstants.SOURCE_STRING=Источник
-BrowserConstants.SYNONYM=СИНОНИМ
+BrowserConstants.SYNONYM=Синоним
 BrowserConstants.SYNONYMS_STRING=Синонимы
-BrowserConstants.SYSTEM-FUNCTIONS=СИСТЕМНЫЕ ФУНКЦИИ
-BrowserConstants.SYSTEM-TABLE=СИСТЕМНАЯ ТАБЛИЦА
+BrowserConstants.SYSTEM-FUNCTIONS=Системные функции
+BrowserConstants.SYSTEM-TABLE=Системная таблица
 BrowserConstants.SYSTEM_FUNCTIONS_STRING=Системные функции
 BrowserConstants.SYSTEM_TABLES_STRING=Системные таблицы
-BrowserConstants.TABLE=ТАБЛИЦА
+BrowserConstants.TABLE=Таблица
 BrowserConstants.TABLES_STRING=Таблицы
-BrowserConstants.TRIGGER=ТРИГГЕР
+BrowserConstants.TRIGGER=Триггер
 BrowserConstants.TRIGGERS_STRING=Триггеры
-BrowserConstants.VIEW=ПРЕДСТАВЛЕНИЕ
+BrowserConstants.VIEW=Представление
 BrowserConstants.VIEWS_STRING=Представления
 BrowserController.error.handle.exception=Ошибка получения выбранного объекта базы данных.\n\nСистема вернула:\n
 BrowserController.error.handle.log=Ошибка получения данных.
@@ -1060,31 +1060,31 @@ MetaKeyPanel.DatabaseObject=Объект базы данных:
 MetaKeyPanel.NoObjects=Нет доступных объектов данного типа.
 MetaKeyPanel.ObjectName=Имя объекта
 MetaKeyPanel.ObjectTypeName=Название типа объектов:
-NamedObject.DATABASE_TRIGGER=ТРИГГЕРЫ БАЗЫ ДАННЫХ
-NamedObject.DOMAIN=ДОМЕНЫ
-NamedObject.EXCEPTION=ИСКЛЮЧЕНИЯ
-NamedObject.EXTERNAL_FUNCTION=ВНЕШНИЕ ФУНКЦИИ
-NamedObject.FUNCTION=ФУНКЦИИ
-NamedObject.GLOBAL_TEMPORARY=ГЛОБАЛЬНЫЕ ВРЕМЕННЫЕ ТАБЛИЦЫ
-NamedObject.INDEX=ИНДЕКСЫ
-NamedObject.PACKAGE=ПАКЕТЫ
-NamedObject.PROCEDURE=ПРОЦЕДУРЫ
-NamedObject.ROLE=РОЛИ
-NamedObject.SEQUENCE=ГЕНЕРАТОРЫ
-NamedObject.SYNONYM=СИНОНИМЫ
-NamedObject.SYSTEM_DATE_TIME_FUNCTIONS=СИСТЕМНЫЕ ВРЕМЕННЫЕ ФУНКЦИИ
-NamedObject.SYSTEM_DOMAIN=СИСТЕМНЫЕ ДОМЕНЫ
-NamedObject.SYSTEM_FUNCTIONS=СИСТЕМНЫЕ ФУНКЦИИ
-NamedObject.SYSTEM_INDEX=СИСТЕМНЫЕ ИНДЕКСЫ
-NamedObject.SYSTEM_NUMERIC_FUNCTIONS=СИСТЕМНЫЕ ЧИСЛОВЫЕ ФУНКЦИИ
-NamedObject.SYSTEM_ROLE=СИСТЕМНЫЕ РОЛИ
-NamedObject.SYSTEM_STRING_FUNCTIONS=СИСТЕМНЫЕ СТРОКОВЫЕ ФУНКЦИИ
-NamedObject.SYSTEM_TABLE=СИСТЕМНЫЕ ТАБЛИЦЫ
-NamedObject.SYSTEM_TRIGGER=СИСТЕМНЫЕ ТРИГГЕРЫ
-NamedObject.SYSTEM_VIEW=СИСТЕМНЫЕ ПРЕДСТАВЛЕНИЯ
-NamedObject.TABLE=ТАБЛИЦЫ
-NamedObject.TRIGGER=ТРИГГЕРЫ
-NamedObject.VIEW=ПРЕДСТАВЛЕНИЯ
+NamedObject.DATABASE_TRIGGER=Триггеры базы данных
+NamedObject.DOMAIN=Домены
+NamedObject.EXCEPTION=Исключения
+NamedObject.EXTERNAL_FUNCTION=Внешние функции
+NamedObject.FUNCTION=Функции
+NamedObject.GLOBAL_TEMPORARY=Глобальные временные таблицы
+NamedObject.INDEX=Индексы
+NamedObject.PACKAGE=Пакеты
+NamedObject.PROCEDURE=Процедуры
+NamedObject.ROLE=Роли
+NamedObject.SEQUENCE=Генераторы
+NamedObject.SYNONYM=Синонимы
+NamedObject.SYSTEM_DATE_TIME_FUNCTIONS=Системные временные функции
+NamedObject.SYSTEM_DOMAIN=Системные домены
+NamedObject.SYSTEM_FUNCTIONS=Системные функции
+NamedObject.SYSTEM_INDEX=Системные индексы
+NamedObject.SYSTEM_NUMERIC_FUNCTIONS=Системные числовые функции
+NamedObject.SYSTEM_ROLE=Системные роли
+NamedObject.SYSTEM_STRING_FUNCTIONS=Системные строковые функции
+NamedObject.SYSTEM_TABLE=Системные таблицы
+NamedObject.SYSTEM_TRIGGER=Системные триггеры
+NamedObject.SYSTEM_VIEW=Системные представления
+NamedObject.TABLE=Таблицы
+NamedObject.TRIGGER=Триггеры
+NamedObject.VIEW=Представления
 ObjectDefinitionPanel.DatabaseView=Представление
 OpenFrameCommand.error.notConnected=Не подключено.\nПожалуйста подключитесь для продолжения.
 PrintPreviewCommand.done=Готово
