--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -727,7 +727,7 @@ ColumnIndexTableModel.IndexedColumn=Индексируемый столбец
 ColumnIndexTableModel.Non-Unique=Неуникальность
 ComparerDBPanel.ComparerDB=Сравнение баз данных
 ConnectionPanel.Advanced=Расширенные
-ConnectionPanel.Authentication=Аутенфикация:
+ConnectionPanel.Authentication=Аутентификация:
 ConnectionPanel.Basic=Базовые
 ConnectionPanel.BasicAu=Базовая
 ConnectionPanel.CharacterSet=Кодировка:
