fix guide: a)fix version b)clarifying edits

--- a/guide/RedExpert_Guide-ru.tex
+++ b/guide/RedExpert_Guide-ru.tex
@@ -66,6 +66,7 @@ Red Expert обладает рядом полезных компонентов: 
 \begin{itemize}[leftmargin=15pt]
 	\item На Linux системах для автоматического скачивания Java должен быть установлен пакет \ttt{libcurl4}.
 	\item На Windows Server для автоматического скачивания Java нужно отключить усиленную безопасность InternetExplorer.
+	\item Если для вашей системы не предусмотрен инсталятор, то можно запустить приложение командой "java -jar RedExpert.jar" из каталога в котором находится RedExpret.jar
 \end{itemize}
 \end{redremark}
 \end{enumerate}	
