cosmetic fixes: 1.When opening a table, the collapsing table is removed 2.On the connections tab, the display of the number of connections has been removed, since there can be only one 3.removed information display when selecting a meta tag

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -792,7 +792,7 @@ ConnectionPanel.sourceField.tool-tip=Data source name
 ConnectionPanel.sourceField=Database File:
 ConnectionPanel.status.Connected.connection=connection open ]
 ConnectionPanel.status.Connected.connections=\ connections open ]
-ConnectionPanel.status.Connected=Connected [ 
+ConnectionPanel.status.Connected=Connected
 ConnectionPanel.status.NotConnected=Not Connected
 ConnectionPanel.statusLabel.tool-tip=Current connection status
 ConnectionPanel.statusLabel=Status:
