See #59585 added the ability to select sorting: 1)by alphabet 2)by importance the default is alphabetical

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -400,6 +400,7 @@ preferences.MaximumRollingLogBackups=Maximum rolling log backups
 preferences.Multi-lineComment=Multi-line Comment
 preferences.NewValueCellBackground=New value cell background
 preferences.NodeHeight=Node height
+preferences.AlphabetSorting=Sort alphabetically
 preferences.NormalText=Normal Text
 preferences.NullValueCellBackground=Null value cell background
 preferences.NullValueCellBackgroundWhenThereIsAdding=Null value cell background when there is adding
