--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -399,6 +399,7 @@ preferences.MaximumRollingLogBackups=Количество сохраняемых
 preferences.Multi-lineComment=Многострочный комментарий
 preferences.NewValueCellBackground=Фон ячейки с новым значением
 preferences.NodeHeight=Высота узла
+preferences.AlphabetSorting=Сортировать по алфавиту
 preferences.NormalText=Обычный текст
 preferences.NullValueCellBackground=Фон ячейки с null
 preferences.NullValueCellBackgroundWhenThereIsAdding=Фон ячейки с null при добавлении
