See #59581 add support ddl triggers

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1071,12 +1071,13 @@ MetaKeyPanel.DatabaseObject=Database Object:
 MetaKeyPanel.NoObjects=No objects of this type are available.
 MetaKeyPanel.ObjectName=Object Name
 MetaKeyPanel.ObjectTypeName=Object Type Name: 
-NamedObject.DATABASE_TRIGGER=Database triggers
+NamedObject.DATABASE_TRIGGER=Triggers[Database]
+NamedObject.DDL_TRIGGER=Triggers[DDL]
 NamedObject.DOMAIN=Domains
 NamedObject.EXCEPTION=Exceptions
-NamedObject.EXTERNAL_FUNCTION=Udf
+NamedObject.EXTERNAL_FUNCTION=UDFs
 NamedObject.FUNCTION=Functions
-NamedObject.GLOBAL_TEMPORARY=Global temporaries
+NamedObject.GLOBAL_TEMPORARY=Tables [Global Temporary]
 NamedObject.INDEX=Indexes
 NamedObject.PACKAGE=Packages
 NamedObject.PROCEDURE=Procedures
@@ -1094,7 +1095,7 @@ NamedObject.SYSTEM_TABLE=System tables
 NamedObject.SYSTEM_TRIGGER=System triggers
 NamedObject.SYSTEM_VIEW=System views
 NamedObject.TABLE=Tables
-NamedObject.TRIGGER=Triggers
+NamedObject.TRIGGER=Triggers [Table]
 NamedObject.VIEW=Views
 ObjectDefinitionPanel.DatabaseView=Database View
 OpenFrameCommand.error.notConnected=Not Connected.\nPlease connect to continue.
