--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1071,6 +1071,7 @@ MetaKeyPanel.NoObjects=Нет доступных объектов данного
 MetaKeyPanel.ObjectName=Имя объекта
 MetaKeyPanel.ObjectTypeName=Название типа объектов:
 NamedObject.DATABASE_TRIGGER=Триггеры базы данных
+NamedObject.DDL_TRIGGER=Триггеры DDL
 NamedObject.DOMAIN=Домены
 NamedObject.EXCEPTION=Исключения
 NamedObject.EXTERNAL_FUNCTION=Внешние функции
