optimization of loading metadata when connecting
(cherry picked from commit aa22dcaa7fc3e47ee51ec339e5bc75bda312c2f8)

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1062,13 +1062,13 @@ MetaKeyPanel.DatabaseObject=Database Object:
 MetaKeyPanel.NoObjects=No objects of this type are available.
 MetaKeyPanel.ObjectName=Object Name
 MetaKeyPanel.ObjectTypeName=Object Type Name: 
-NamedObject.DATABASE_TRIGGER=Triggers[Database]
-NamedObject.DDL_TRIGGER=Triggers[DDL]
+NamedObject.DATABASE_TRIGGER=Triggers for Database
+NamedObject.DDL_TRIGGER=Triggers for DDL
 NamedObject.DOMAIN=Domains
 NamedObject.EXCEPTION=Exceptions
 NamedObject.EXTERNAL_FUNCTION=UDFs
 NamedObject.FUNCTION=Functions
-NamedObject.GLOBAL_TEMPORARY=Tables [Global Temporary]
+NamedObject.GLOBAL_TEMPORARY=Global Temporary Tables
 NamedObject.INDEX=Indexes
 NamedObject.PACKAGE=Packages
 NamedObject.PROCEDURE=Procedures
