See #59984 changed from "Triggers [Table]" to "Triggers for Table"

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1086,7 +1086,7 @@ NamedObject.SYSTEM_TABLE=System tables
 NamedObject.SYSTEM_TRIGGER=System triggers
 NamedObject.SYSTEM_VIEW=System views
 NamedObject.TABLE=Tables
-NamedObject.TRIGGER=Triggers [Table]
+NamedObject.TRIGGER=Triggers for Table
 NamedObject.VIEW=Views
 ObjectDefinitionPanel.DatabaseView=Database View
 OpenFrameCommand.error.notConnected=Not Connected.\nPlease connect to continue.
