add translation of messages when updating

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -947,6 +947,7 @@ FeedbackPanel.postingFeedback=Posting Feedback
 FeedbackPanel.postingFeedbackMessage=Posting feedback report to rdb.support@red-soft.ru
 FeedbackPanel.warningInternetConnection=This feature requires an active internet connection.
 GUIUtilities.notAuthorized=not authorized
+GUIUtilities.want-exit=Do you want exit from this account?
 GenerateErdPanel.Generate=Generate
 GenerateErdPanel.title=Generate ERD
 GeneratorTestDataPanel.AfterCommit=Commit after
@@ -1153,6 +1154,7 @@ QueryEditorToolBar.toggle-autocommit-command=Toggle auto-commit on/off
 QueryEditorToolBar.toggle-editor-output-command=Show/hide the output pane
 ReddatabaseAPI.Authorization=Authorization
 ReddatabaseAPI.message=To continue you need to enter\nyour login and password from the site reddatabase.ru\nAuthorization is required to send bug reports\nand automatically download updates from the site.
+ReddatabaseAPI.unknown-password=Unknown Login or Password. Try again?
 ReleaseNotesCommand.pathToNotes=org/executequery/release.notes
 ReleaseNotesCommand.releaseNotes=Release Notes
 RestoreDefaultsCommand.restoreDefaults=Restore Defaults
