--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -946,6 +946,7 @@ FeedbackPanel.postingFeedback=Отправка отзыва
 FeedbackPanel.postingFeedbackMessage=Отправка отзыва по адресу rdb.support@red-soft.ru
 FeedbackPanel.warningInternetConnection=Эта функция требует активного подключения к Интернету.
 GUIUtilities.notAuthorized=Вы не авторизованы
+GUIUtilities.want-exit=Вы хотите выйти из аккаунта?
 GenerateErdPanel.Generate=Построить
 GenerateErdPanel.title=Построить диаграмму БД
 GeneratorTestDataPanel.AfterCommit=Фиксация после
@@ -1152,6 +1153,7 @@ QueryEditorToolBar.toggle-autocommit-command=Включить/выключить
 QueryEditorToolBar.toggle-editor-output-command=Показать/скрыть панель вывода
 ReddatabaseAPI.Authorization=Авторизация
 ReddatabaseAPI.message=Для продолжения необходимо ввести логин и пароль\nдля входа на reddatabase.ru\nАвторизация необходима для отправки отчетов об ошибках\nи автоматического скачивания обновлений с сайта
+ReddatabaseAPI.unknown-password=Неизвестный логин или пароль. Попробуете снова?
 ReleaseNotesCommand.pathToNotes=org/executequery/release.notes.ru
 ReleaseNotesCommand.releaseNotes=Примечания к выпуску
 RestoreDefaultsCommand.restoreDefaults=Вернуть стандартные настройки
