fix docs:fixed information about sql script execution

--- a/guide/RedExpert_Guide-ru.tex
+++ b/guide/RedExpert_Guide-ru.tex
@@ -1727,7 +1727,7 @@ SELECT * FROM employees WHERE (surname = ?)
 	\end{figure}
 	\item Выберите открытое соединение.
 	\item Выберите действие в случае возникновения ошибки: остановиться или продолжить.
-	\item Укажите путь к файлу с SQL запросами.
+	\item Укажите путь к файлу с SQL запросами, если вы хотите выполнить скрипт из файла.
 	\item Поставьте галочку, если вы хотите видеть подробный вывод о ходе выполнения.
 	\item Нажмите кнопку \textit{Start}.
 	\item Сделайте \ttt{commit} или \ttt{rollback} транзакции, нажав на соответствующие кнопки.
