--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -115,7 +115,7 @@ action.cut-command=Cut
 action.database-disconnect-command.description=Close the database connection associated with the current selection
 action.database-disconnect-command=Close Connection
 action.delete-row-command=Drop the selected table column
-action.donate-command.description=Make a donation to support the continued development of Red Expert
+action.donate-command.description=Make a donation to support the continued development of RedXpert
 action.donate-command=Make a Donation
 action.drop-object-command=Drop the selected object
 action.duplicate-row-down-command=Duplicate text down
@@ -170,7 +170,7 @@ action.import-connections-from-file-command=Import Connections from file
 action.import-delimited-command=Import from Delimited File
 action.import-xml-command=Import from XML
 action.insert-row-command=Create a new table column after the current selection
-action.license-command.description=Red Expert release license
+action.license-command.description=RedXpert release license
 action.license-command=License
 action.log-in-account-command=Log in reddatabase.ru
 action.manage-bookmarks-command=Manage Query Bookmarks
@@ -189,7 +189,7 @@ action.print-plan-command=Print Plan
 action.print-preview-command=Print Preview
 action.redo-command.description=Redo the last action
 action.redo-command=Redo
-action.release-notes-command.description=Red Expert version release notes
+action.release-notes-command.description=RedXpert version release notes
 action.release-notes-command=Release Notes
 action.replace-command=Replace...
 action.replace-next-command=Replace Next
@@ -709,7 +709,7 @@ BrowserTriggerPanel.Trigger=Trigger
 BrowserTriggerPanel.TriggerName=Trigger Name:
 BrowserUDFPanel.DatabaseUDF=Database UDF
 BrowserUDFPanel.UDFName=UDF Name
-BrowserViewPanel.JobName=Red Expert - Database Browser
+BrowserViewPanel.JobName=RedXpert - Database Browser
 CatalogPanel.AvailableSchemas=Available Schemas
 CatalogPanel.DatabaseCatalog=Database Catalog
 CatalogPanel.SchemaName=Schema Name
@@ -720,9 +720,9 @@ CheckForUpdateNotifier.downloadVersionMessage=New version {0} is available for d
 CheckForUpdateNotifier.latestVersionInfoTitle=Latest Version Info
 CheckForUpdateNotifier.newVersionAvailableText=New version {0} available.
 CheckForUpdateNotifier.newVersionMessage=New version {0} is available for download at <a style=\"color:#3F7ED3\" href=\"{1}\">{1}</a>.\nClick <a  style=\"color:#3F7ED3\" href=\"{2}\">here</a> to go to the download page.\n\nDo you wish to view the version notes for this release?
-CheckForUpdateNotifier.noUpdateMessage=No update available.\nThis version of Red Expert is up to date.\nPlease check back here periodically to ensure you have the latest version.
+CheckForUpdateNotifier.noUpdateMessage=No update available.\nThis version of RedXpert is up to date.\nPlease check back here periodically to ensure you have the latest version.
 CheckForUpdateNotifier.progressDialogForReleaseNotesLabel=Retrieving new version release notes
-CheckForUpdateNotifier.title=Red Expert Update
+CheckForUpdateNotifier.title=RedXpert Update
 CheckForUpdateNotifier.updateAvailable=Update available
 ColumnIndexTableModel.IndexName=Index Name
 ColumnIndexTableModel.IndexedColumn=Indexed Column
