--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -116,7 +116,7 @@ action.cut-command=Вырезать
 action.database-disconnect-command.description=Закрыть текущее подключение к базе данных 
 action.database-disconnect-command=Закрыть подключение
 action.delete-row-command=Удалить выделенный столбец в таблице
-action.donate-command.description=Отправить финансовую поддержку для продолжения разработки Red Expert
+action.donate-command.description=Отправить финансовую поддержку для продолжения разработки RedXpert
 action.donate-command=Поддержать разработчика
 action.drivers-command=Драйверы
 action.drop-object-command=Удалить выделенный объект
@@ -172,7 +172,7 @@ action.import-connections-from-file-command=Импорт подключений 
 action.import-delimited-command=Импорт из файла с разделителями
 action.import-xml-command=Импорт из XML
 action.insert-row-command=Создать новый столбец в таблице после выделенного
-action.license-command.description=Лицензия к данному выпуску Red Expert
+action.license-command.description=Лицензия к данному выпуску RedXpert
 action.license-command=Лицензия
 action.log-in-account-command=Войти на reddatabase.ru
 action.manage-bookmarks-command=Управление закладками запросов
@@ -710,7 +710,7 @@ BrowserTriggerPanel.Trigger=Триггер
 BrowserTriggerPanel.TriggerName=Имя триггера: 
 BrowserUDFPanel.DatabaseUDF=Внешняя функция
 BrowserUDFPanel.UDFName=Имя функции
-BrowserViewPanel.JobName=Red Expert - Браузер баз данных
+BrowserViewPanel.JobName=RedXpert - Браузер баз данных
 CatalogPanel.AvailableSchemas=Доступные схемы
 CatalogPanel.DatabaseCatalog=Каталог базы данных
 CatalogPanel.SchemaName=Имя схемы
@@ -721,7 +721,7 @@ CheckForUpdateNotifier.downloadVersionMessage=Новая версия {0} дос
 CheckForUpdateNotifier.latestVersionInfoTitle=Информация о последней версии
 CheckForUpdateNotifier.newVersionAvailableText=Доступна новая версия {0}.
 CheckForUpdateNotifier.newVersionMessage=Новая версия {0} доступна для скачивания c <a style=\"color:#3F7ED3\" href=\"{1}\">{1}</a>.\nКликните <a  style=\"color:#3F7ED3\" href=\"{2}\">Здесь</a> чтобы перейти на страницу загрузки.\n\nВы хотите просмотреть примечания к версии для этого выпуска?
-CheckForUpdateNotifier.noUpdateMessage=Обновление недоступно. \nДанная версия Red Expert актуальна. \nПериодически проверяйте обновления, чтобы убедиться, что у вас установлена последняя версия.
+CheckForUpdateNotifier.noUpdateMessage=Обновление недоступно. \nДанная версия RedXpert актуальна. \nПериодически проверяйте обновления, чтобы убедиться, что у вас установлена последняя версия.
 CheckForUpdateNotifier.progressDialogForReleaseNotesLabel=Получение примечаний к выпуску новой версии
 CheckForUpdateNotifier.title=Обновление Ред Эксперта
 CheckForUpdateNotifier.updateAvailable=Доступно обновление
