See #61466 add Driver Manager
(cherry picked from commit 7f108e9fb45cbf0df2feb9dc549e94bafa4a3187)

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -33,6 +33,7 @@ common.dependencies=Dependencies
 common.description=Description
 common.disconnect.button=Disconnect
 common.domain=DOMAIN
+common.driver=Driver editing
 common.drivers=Drivers
 common.encoding=Encoding
 common.error-message=Error message
@@ -117,6 +118,7 @@ action.database-disconnect-command=Close Connection
 action.delete-row-command=Drop the selected table column
 action.donate-command.description=Make a donation to support the continued development of Red Expert
 action.donate-command=Make a Donation
+action.drivers-command=Drivers
 action.drop-object-command=Drop the selected object
 action.duplicate-row-down-command=Duplicate text down
 action.duplicate-row-up-command=Duplicate text up
