--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -33,6 +33,7 @@ common.dependencies=Зависимости
 common.description=Описание
 common.disconnect.button=Отключиться
 common.domain=ДОМЕН
+common.driver=Редактирование драйвера
 common.drivers=Драйверы
 common.encoding=Кодировка
 common.error-message=Сообщение об ошибке
@@ -117,6 +118,7 @@ action.database-disconnect-command=Закрыть подключение
 action.delete-row-command=Удалить выделенный столбец в таблице
 action.donate-command.description=Отправить финансовую поддержку для продолжения разработки Red Expert
 action.donate-command=Поддержать разработчика
+action.drivers-command=Драйверы
 action.drop-object-command=Удалить выделенный объект
 action.duplicate-row-down-command=Дублировать текст внизу
 action.duplicate-row-up-command=Дублировать текст вверху
