--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -659,6 +659,9 @@ BrowserTreePopupMenu.delete=Удалить
 BrowserTreePopupMenu.deleteText=Удалить базу данных {0}
 BrowserTreePopupMenu.disconnect=Отключить
 BrowserTreePopupMenu.disconnectText=Отключиться от базы данных {0}
+//dz
+BrowserTreePopupMenu.DzMenuBarText = Что нибудь {0}
+//
 BrowserTreePopupMenu.duplicate=Копия
 BrowserTreePopupMenu.duplicateText=Создать копию подключения {0}
 BrowserTreePopupMenu.duplicateWithSource=Копия источника
