This commit contains implementation of context menu "dataBaseInfo". Now if you clicked on database name, information about DB connection wont appear in the right side of the screen. public void valueChanged_ from class BrowserController moved to class BrowserTreePopupMenuActionListener

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -659,7 +659,7 @@ BrowserTreePopupMenu.delete=Удалить
 BrowserTreePopupMenu.deleteText=Удалить базу данных {0}
 BrowserTreePopupMenu.disconnect=Отключить
 BrowserTreePopupMenu.disconnectText=Отключиться от базы данных {0}
-BrowserTreePopupMenu.dataBaseInfo=Информация о базе данных
+BrowserTreePopupMenu.dataBaseInformation=Информация о базе данных
 BrowserTreePopupMenu.duplicate=Копия
 BrowserTreePopupMenu.duplicateText=Создать копию подключения {0}
 BrowserTreePopupMenu.duplicateWithSource=Копия источника
