--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -659,7 +659,7 @@ BrowserTreePopupMenu.createTableStatement=CREATE TABLE statement
 BrowserTreePopupMenu.delete=Delete
 BrowserTreePopupMenu.deleteText=Remove Data Source {0}
 BrowserTreePopupMenu.disconnect=Disconnect
-BrowserTreePopupMenu.dataBaseInfo=Data base information
+BrowserTreePopupMenu.dataBaseInformation=Database information
 BrowserTreePopupMenu.disconnectText=Disconnect Data Source {0} 
 BrowserTreePopupMenu.duplicate=Duplicate
 BrowserTreePopupMenu.duplicateText=Create Duplicate of Connection {0}
