See RS-60012 add a node "users"

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1097,6 +1097,7 @@ NamedObject.SYSTEM_STRING_FUNCTIONS=System string functions
 NamedObject.SYSTEM_TABLE=System tables
 NamedObject.SYSTEM_TRIGGER=System triggers
 NamedObject.SYSTEM_VIEW=System views
+NamedObject.USER=Users
 NamedObject.TABLE=Tables
 NamedObject.TRIGGER=Triggers for Table
 NamedObject.VIEW=Views
@@ -1270,3 +1271,4 @@ WindowAddUser.error.failed-edit-user=Failed to edit user {0}
 WindowAddUser.error.pwds-not-match=Passwords do not match
 WindowAddUser.tag=Tag
 WindowAddUser.value=Value
+WindowAddUser.properties=properties
