add the system packages node to the database object tree

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1092,6 +1092,7 @@ NamedObject.SYSTEM_DOMAIN=System domains
 NamedObject.SYSTEM_FUNCTIONS=System functions
 NamedObject.SYSTEM_INDEX=System indexes
 NamedObject.SYSTEM_NUMERIC_FUNCTIONS=System numeric functions
+NamedObject.SYSTEM_PACKAGE=System packages
 NamedObject.SYSTEM_ROLE=System roles
 NamedObject.SYSTEM_STRING_FUNCTIONS=System string functions
 NamedObject.SYSTEM_TABLE=System tables
