--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1091,6 +1091,7 @@ NamedObject.SYSTEM_DOMAIN=Системные домены
 NamedObject.SYSTEM_FUNCTIONS=Системные функции
 NamedObject.SYSTEM_INDEX=Системные индексы
 NamedObject.SYSTEM_NUMERIC_FUNCTIONS=Системные числовые функции
+NamedObject.SYSTEM_PACKAGE=Системные пакеты
 NamedObject.SYSTEM_ROLE=Системные роли
 NamedObject.SYSTEM_STRING_FUNCTIONS=Системные строковые функции
 NamedObject.SYSTEM_TABLE=Системные таблицы
