Improvements to the editor 1. Improved code highlighting 2. Improved transition to an object from the editor 3. Temporarily removed bracket highlighting

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -411,6 +411,7 @@ preferences.NullValueCellText=Null value cell text
 preferences.Number=Number
 preferences.NumericValueCellBackground=Numeric value cell background
 preferences.ObjectsDB=Objects DB
+preferences.Datatype=Datatype
 preferences.OpenANewEditorForNewOpenConnection=Open a new editor for new open connection
 preferences.Operator=Operator
 preferences.OtherValueCellBackground=Other value cell background
@@ -454,6 +455,7 @@ preferences.SampleMulti-lineCommentText=Sample multi-line comment text
 preferences.SampleNormalText=Sample normal text
 preferences.SampleNumberText=Sample number text
 preferences.SampleObjectsDb=Sample objects db
+preferences.SampleDatatype=Sample datatype
 preferences.SampleOperatorText=Sample operator text
 preferences.SampleQuoteText=Sample quote text
 preferences.SampleSelectedText=Sample selected text
