Russian localization patch.

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -625,6 +625,18 @@ BrowserProcedurePanel.source=Source
 BrowserProcedurePanel.system-date-function=Database System Date/Time Function
 BrowserProcedurePanel.system-numeric-function=Database System Numeric Function
 BrowserProcedurePanel.system-string-function=Database System String Function
+BrowserRolePanel.Object=Object
+BrowserRolePanel.Select=Select
+BrowserRolePanel.Update=Update
+BrowserRolePanel.Delete=Delete
+BrowserRolePanel.Insert=Insert
+BrowserRolePanel.Execute=Execute
+BrowserRolePanel.References=References
+BrowserRolePanel.ShowSystemTables=Show system tables
+BrowserRolePanel.AllObjects=All Objects
+BrowserRolePanel.Tables=Tables
+BrowserRolePanel.Procedures=Procedures
+BrowserRolePanel.Views=Views
 BrowserSequencePanel.DatabaseSequence=Database Sequence
 BrowserSequencePanel.SequenceName=Sequence Name: 
 BrowserSequencePanel.sequence=Sequence
