--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -623,6 +623,18 @@ BrowserProcedurePanel.source=Тело процедуры
 BrowserProcedurePanel.system-date-function=Системная функция даты/времени
 BrowserProcedurePanel.system-numeric-function=Числовая системная функция
 BrowserProcedurePanel.system-string-function=Строковая системная функция
+BrowserRolePanel.Object=Объекты
+BrowserRolePanel.Select=Select
+BrowserRolePanel.Update=Update
+BrowserRolePanel.Delete=Delete
+BrowserRolePanel.Insert=Insert
+BrowserRolePanel.Execute=Execute
+BrowserRolePanel.References=References
+BrowserRolePanel.ShowSystemTables=Показывать системные таблицы
+BrowserRolePanel.AllObjects=Все объекты
+BrowserRolePanel.Tables=Таблицы
+BrowserRolePanel.Procedures=Процедуры
+BrowserRolePanel.Views=Представления
 BrowserSequencePanel.DatabaseSequence=Генератор
 BrowserSequencePanel.SequenceName=Имя генератора: 
 BrowserSequencePanel.sequence=Генератор
