SetNull localizations tweaks.

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1227,7 +1227,7 @@ ResultSetTablePopupMenu.PrintTable=Table
 ResultSetTablePopupMenu.RecordDataItemViewer=Record Data Item Viewer
 ResultSetTablePopupMenu.SelectRow=Select Row
 ResultSetTablePopupMenu.SelectColumn=Select Column
-ResultSetTablePopupMenu.SetNull=Set Null
+ResultSetTablePopupMenu.SetNull=Set NULL
 ResultSetTablePopupMenu.View=View
 RootDatabaseObjectNode.error.add=Node must be of type DatabaseHostNode
 SchemaTree.error.exportAsDrag=Node selection pending before drag
