--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1226,7 +1226,7 @@ ResultSetTablePopupMenu.PrintTable=Таблицу
 ResultSetTablePopupMenu.RecordDataItemViewer=Средство просмотра элементов данных записи
 ResultSetTablePopupMenu.SelectRow=Выделить строку
 ResultSetTablePopupMenu.SelectColumn=Выделить столбец
-ResultSetTablePopupMenu.SetNull=Сделать Null
+ResultSetTablePopupMenu.SetNull=Установить в NULL
 ResultSetTablePopupMenu.View=Просмотреть содержимое
 RootDatabaseObjectNode.error.add=Узел должен быть типа DatabaseHostNode
 SchemaTree.error.exportAsDrag=Выбор узла до перетаскивания
