--- a/guide/general_defs.tex
+++ b/guide/general_defs.tex
@@ -268,7 +268,7 @@
 \vspace*{\fill}
 
 \begin{flushright}
-\Huge {\xhrulefill{red}{2mm}\color{red} RedXpert} \\
+\Huge {\xhrulefill{red}{2mm}\color{red} RedExpert} \\
 \LARGE Версия 2021.02\\
 #1
 \end{flushright}
