correct after the infusion of interns' changes

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -674,6 +674,7 @@ BrowserTreePopupMenu.connectText=Connect Data Source {0}
 BrowserTreePopupMenu.copyName=Copy Name
 BrowserTreePopupMenu.create=Create
 BrowserTreePopupMenu.createTableStatement=CREATE TABLE statement
+BrowserTreePopupMenu.dataBaseInformation=Database information
 BrowserTreePopupMenu.delete=Delete
 BrowserTreePopupMenu.deleteText=Remove Data Source {0}
 BrowserTreePopupMenu.disconnect=Disconnect
