--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1147,11 +1147,13 @@ NamedObject.SYSTEM_DOMAIN=System domains
 NamedObject.SYSTEM_FUNCTIONS=System functions
 NamedObject.SYSTEM_INDEX=System indexes
 NamedObject.SYSTEM_NUMERIC_FUNCTIONS=System numeric functions
+NamedObject.SYSTEM_PACKAGE=System packages
 NamedObject.SYSTEM_ROLE=System roles
 NamedObject.SYSTEM_STRING_FUNCTIONS=System string functions
 NamedObject.SYSTEM_TABLE=System tables
 NamedObject.SYSTEM_TRIGGER=System triggers
 NamedObject.SYSTEM_VIEW=System views
+NamedObject.USER=Users
 NamedObject.TABLE=Tables
 NamedObject.TRIGGER=Triggers for Table
 NamedObject.VIEW=Views
