--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1146,11 +1146,13 @@ NamedObject.SYSTEM_DOMAIN=Системные домены
 NamedObject.SYSTEM_FUNCTIONS=Системные функции
 NamedObject.SYSTEM_INDEX=Системные индексы
 NamedObject.SYSTEM_NUMERIC_FUNCTIONS=Системные числовые функции
+NamedObject.SYSTEM_PACKAGE=Системные пакеты
 NamedObject.SYSTEM_ROLE=Системные роли
 NamedObject.SYSTEM_STRING_FUNCTIONS=Системные строковые функции
 NamedObject.SYSTEM_TABLE=Системные таблицы
 NamedObject.SYSTEM_TRIGGER=Системные триггеры
 NamedObject.SYSTEM_VIEW=Системные представления
+NamedObject.USER=Пользователи
 NamedObject.TABLE=Таблицы
 NamedObject.TRIGGER=Триггеры
 NamedObject.VIEW=Представления
