Translation error corrected

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -674,7 +674,7 @@ BrowserTreePopupMenu.create=Создать
 BrowserTreePopupMenu.createTableStatement=CREATE TABLE запрос
 BrowserTreePopupMenu.dataBaseInformation=Информация о базе данных
 BrowserTreePopupMenu.delete=Удалить
-BrowserTreePopupMenu.deleteText=Удалить базу данных {0}
+BrowserTreePopupMenu.deleteText=Удалить подключение {0}
 BrowserTreePopupMenu.disconnect=Отключить
 BrowserTreePopupMenu.disconnectText=Отключиться от базы данных {0}
 BrowserTreePopupMenu.duplicate=Копия
