See RS-59527 Data fetching with PreparedStatement and parameters

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1041,7 +1041,7 @@ GeneratorTestDataPanel.getFromOtherTable=Получить из другой та
 GotoCommand.goTo=Перейти к
 GotoCommand.lineNumber=Номер строки:
 GrantManagerPanel.AllObjects=Все объекты
-GrantManagerPanel.CancelFill=Отменить ожидание
+GrantManagerPanel.CancelFill=Прервать
 GrantManagerPanel.ColumnsOf=Поля для 
 GrantManagerPanel.DisplayAll=Показывать все
 GrantManagerPanel.Field=Поле
