See RS-59524 a tab with object privileges has been added

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1060,6 +1060,7 @@ GrantManagerPanel.ShowSystemTables=Show System Tables
 GrantManagerPanel.Tables=Tables
 GrantManagerPanel.Triggers=Triggers
 GrantManagerPanel.Type=Type
+GrantManagerPanel.User=User
 GrantManagerPanel.Users=Users
 GrantManagerPanel.Views=Views
 GrantManagerPanel.connection.close=Connection Close!
