See RS-68912 Added a branch of system generators

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1149,6 +1149,7 @@ NamedObject.SYSTEM_INDEX=Системные индексы
 NamedObject.SYSTEM_NUMERIC_FUNCTIONS=Системные числовые функции
 NamedObject.SYSTEM_PACKAGE=Системные пакеты
 NamedObject.SYSTEM_ROLE=Системные роли
+NamedObject.SYSTEM_SEQUENCE=Системные генераторы
 NamedObject.SYSTEM_STRING_FUNCTIONS=Системные строковые функции
 NamedObject.SYSTEM_TABLE=Системные таблицы
 NamedObject.SYSTEM_TRIGGER=Системные триггеры
