--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1150,6 +1150,7 @@ NamedObject.SYSTEM_INDEX=System indexes
 NamedObject.SYSTEM_NUMERIC_FUNCTIONS=System numeric functions
 NamedObject.SYSTEM_PACKAGE=System packages
 NamedObject.SYSTEM_ROLE=System roles
+NamedObject.SYSTEM_SEQUENCE=System sequences
 NamedObject.SYSTEM_STRING_FUNCTIONS=System string functions
 NamedObject.SYSTEM_TABLE=System tables
 NamedObject.SYSTEM_TRIGGER=System triggers
