See RS-61582 Add data update button for system tables

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1251,6 +1251,7 @@ TableDataTab.Commit=Commit
 TableDataTab.DeleteRecord=Delete record
 TableDataTab.FetchAll=Fetch all
 TableDataTab.InsertRecord=Insert record
+TableDataTab.ReloadData=Reload data
 TableDataTab.Rollback=Rollback
 TableDataTab.labelExecuting=Executing query for data...
 TablePrivilegeTab.Grantor=Grantor
