--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1250,6 +1250,7 @@ TableDataTab.Commit=Фиксировать
 TableDataTab.DeleteRecord=Удалить запись
 TableDataTab.FetchAll=Загрузить все
 TableDataTab.InsertRecord=Вставить запись
+TableDataTab.ReloadData=Обновить данные
 TableDataTab.Rollback=Откатить
 TableDataTab.labelExecuting=Выполнение запроса загрузки данных...
 TablePrivilegeTab.Grantor=Правообладатель
